# chat

./: .gitignore  Dockerfile  README.md  aggregation.py  dependencies.py  docker-compose.yml  init_db.py  main.py  models.py  pyproject.toml  schema.py  test_scenario.py
functions/: README.md  mail_handler.py  push_handler.py  pyproject.toml
internal/: auth.py  db.py  message_store.py  notification.py
routers/: auth.py  rooms.py  settings.py
websocket/: handler.py
